1) Refactored Scene.java 2) Fixed the problem where replaced groups keep respawn and de-spawn on tick