@@ -6,7 +6,6 @@ import emu.grasscutter.data.GameDepot;
 import emu.grasscutter.data.binout.SceneNpcBornEntry;
 import emu.grasscutter.data.binout.routes.Route;
 import emu.grasscutter.data.excels.*;
-import emu.grasscutter.data.server.Grid;
 import emu.grasscutter.game.avatar.Avatar;
 import emu.grasscutter.game.dungeons.DungeonManager;
 import emu.grasscutter.game.dungeons.DungeonSettleListener;
@@ -14,15 +13,14 @@ import emu.grasscutter.game.dungeons.challenge.WorldChallenge;
 import emu.grasscutter.game.dungeons.enums.DungeonPassConditionType;
 import emu.grasscutter.game.entity.*;
 import emu.grasscutter.game.entity.gadget.GadgetWorktop;
-import emu.grasscutter.game.managers.blossom.BlossomManager;
 import emu.grasscutter.game.player.Player;
+import emu.grasscutter.game.player.TeamInfo;
 import emu.grasscutter.game.props.*;
 import emu.grasscutter.game.quest.QuestGroupSuite;
 import emu.grasscutter.game.world.data.TeleportProperties;
 import emu.grasscutter.net.packet.BasePacket;
 import emu.grasscutter.net.proto.AttackResultOuterClass.AttackResult;
 import emu.grasscutter.net.proto.EnterTypeOuterClass;
-import emu.grasscutter.net.proto.SceneEntityInfoOuterClass.SceneEntityInfo;
 import emu.grasscutter.net.proto.SelectWorktopOptionReqOuterClass;
 import emu.grasscutter.net.proto.VisionTypeOuterClass.VisionType;
 import emu.grasscutter.scripts.SceneIndexManager;
@@ -35,10 +33,7 @@ import emu.grasscutter.server.event.player.PlayerTeleportEvent;
 import emu.grasscutter.server.packet.send.*;
 import emu.grasscutter.utils.KahnsSort;
 import emu.grasscutter.utils.Position;
-import it.unimi.dsi.fastutil.ints.Int2FloatMap;
 import it.unimi.dsi.fastutil.ints.Int2ObjectMap;
-import it.unimi.dsi.fastutil.ints.Int2ObjectOpenCustomHashMap;
-import it.unimi.dsi.fastutil.ints.Int2ObjectOpenHashMap;
 import lombok.Getter;
 import lombok.Setter;
 import lombok.val;
@@ -50,94 +45,81 @@ import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 
 public class Scene {
     @Getter private final World world;
     @Getter private final SceneData sceneData;
-    @Getter private final List<Player> players;
-    @Getter private final Map<Integer, GameEntity> entities;
-    @Getter private final Map<Integer, GameEntity> weaponEntities;
-    @Getter private final Set<SpawnDataEntry> spawnedEntities;
-    @Getter private final Set<SpawnDataEntry> deadSpawnedEntities;
-    @Getter private final Set<SceneBlock> loadedBlocks;
-    @Getter private final Set<SceneGroup> loadedGroups;
-    private final HashSet<Integer> unlockedForces;
+    @Getter private final List<Player> players = new CopyOnWriteArrayList<>();
+    @Getter private final Map<Integer, GameEntity> entities = new ConcurrentHashMap<>();
+    @Getter private final Map<Integer, GameEntity> weaponEntities = new ConcurrentHashMap<>();
+    private final Set<SpawnDataEntry> spawnedEntities = ConcurrentHashMap.newKeySet();
+    @Getter private final Set<SpawnDataEntry> deadSpawnedEntities = ConcurrentHashMap.newKeySet();
+    private final Set<SceneBlock> loadedBlocks = ConcurrentHashMap.newKeySet();
+    @Getter private final Set<SceneGroup> loadedGroups = ConcurrentHashMap.newKeySet();
+    private final Set<Integer> replacedGroup = ConcurrentHashMap.newKeySet();
+    private final HashSet<Integer> unlockedForces = new HashSet<>();
     private final List<Runnable> afterLoadedCallbacks = new ArrayList<>();
     private final long startWorldTime;
     @Getter @Setter DungeonManager dungeonManager;
     @Getter Int2ObjectMap<Route> sceneRoutes;
-    private Set<SpawnDataEntry.GridBlockId> loadedGridBlocks;
+    private Set<SpawnDataEntry.GridBlockId> loadedGridBlocks = new HashSet<>();
     @Getter @Setter private boolean dontDestroyWhenEmpty;
     @Getter private final SceneScriptManager scriptManager;
     @Getter @Setter private WorldChallenge challenge;
-    @Getter private List<DungeonSettleListener> dungeonSettleListeners;
-    @Getter @Setter private int prevScene; // Id of the previous scene
+    @Getter private final List<DungeonSettleListener> dungeonSettleListeners = new ArrayList<>();
+    @Getter @Setter private int prevScene; // id of the previous scene
     @Getter @Setter private int prevScenePoint;
     @Getter @Setter private int killedMonsterCount;
-    private Set<SceneNpcBornEntry> npcBornEntrySet;
+    private Set<SceneNpcBornEntry> npcBornEntrySet = ConcurrentHashMap.newKeySet();
     @Getter private boolean finishedLoading = false;
     @Getter private int tickCount = 0;
     @Getter private boolean isPaused = false;
 
-    @Getter private GameEntity sceneEntity;
+    @Getter private final GameEntity sceneEntity;
 
     public Scene(World world, SceneData sceneData) {
         this.world = world;
         this.sceneData = sceneData;
-        this.players = new CopyOnWriteArrayList<>();
-        this.entities = new ConcurrentHashMap<>();
-        this.weaponEntities = new ConcurrentHashMap<>();
 
         this.prevScene = 3;
         this.sceneRoutes = GameData.getSceneRoutes(getId());
 
-        startWorldTime = world.getWorldTime();
+        this.startWorldTime = world.getWorldTime();
 
-        this.spawnedEntities = ConcurrentHashMap.newKeySet();
-        this.deadSpawnedEntities = ConcurrentHashMap.newKeySet();
-        this.loadedBlocks = ConcurrentHashMap.newKeySet();
-        this.loadedGroups = ConcurrentHashMap.newKeySet();
-        this.loadedGridBlocks = new HashSet<>();
-        this.npcBornEntrySet = ConcurrentHashMap.newKeySet();
         this.scriptManager = new SceneScriptManager(this);
-        this.unlockedForces = new HashSet<>();
 
         //Create scene entity
-
         this.sceneEntity = new EntityScene(this);
     }
 
     public int getId() {
-        return sceneData.getId();
+        return this.sceneData.getId();
     }
 
     public SceneType getSceneType() {
-        return getSceneData().getSceneType();
+        return this.sceneData.getSceneType();
     }
 
     public int getPlayerCount() {
-        return this.getPlayers().size();
+        return this.players.size();
     }
 
     public GameEntity getEntityById(int id) {
-        if(id == 0x13800001) return sceneEntity;
-        else if(id == getWorld().getLevelEntityId()) return getWorld().getEntity();
+        if (id == 0x13800001) return this.sceneEntity;
+        else if (id == this.world.getLevelEntityId()) return this.world.getEntity();
 
-        var teamEntityPlayer = players.stream().filter(p -> p.getTeamManager().getEntity().getId() == id).findAny();
+        val teamEntityPlayer = this.players.stream().filter(p -> p.getTeamManager().getEntity().getId() == id).findAny();
         if(teamEntityPlayer.isPresent()) return teamEntityPlayer.get().getTeamManager().getEntity();
 
-        var entity = this.entities.get(id);
-        if(entity == null) entity = this.weaponEntities.get(id);
-        if(entity == null && EntityIdType.idFromEntityId(id) == EntityIdType.AVATAR.getId()) {
-            for (var player : getPlayers()) {
-                for (var avatar : player.getTeamManager().getActiveTeam()) {
-                    if(avatar.getId() == id) return avatar;
-                }
-            }
+        Optional<GameEntity> entity = Optional.ofNullable(this.entities.get(id)).or(() -> Optional.ofNullable(this.weaponEntities.get(id)));
+        if (entity.isEmpty() && EntityIdType.idFromEntityId(id) == EntityIdType.AVATAR.getId()) {
+            entity = this.players.stream().map(p -> p.getTeamManager().getActiveTeam()).flatMap(List::stream)
+                .filter(entityAvatar -> entityAvatar.getId() == id).findFirst().map(GameEntity.class::cast);
         }
 
-        return entity;
+        return entity.orElse(null);
     }
 
     public GameEntity getEntityByConfigId(int configId) {
@@ -156,18 +138,18 @@ public class Scene {
 
     @Nullable
     public Route getSceneRouteById(int routeId) {
-        return sceneRoutes.get(routeId);
+        return this.sceneRoutes.get(routeId);
     }
 
     public void setPaused(boolean paused) {
-        if (isPaused != paused) {
-            isPaused = paused;
+        if (this.isPaused != paused) {
+            this.isPaused = paused;
             broadcastPacket(new PacketSceneTimeNotify(this));
         }
     }
 
     public int getSceneTime() {
-        return (int) (getWorld().getWorldTime() - startWorldTime);
+        return (int) (this.world.getWorldTime() - this.startWorldTime);
     }
 
     public int getSceneTimeSeconds() {
@@ -175,80 +157,63 @@ public class Scene {
     }
 
     public void addDungeonSettleObserver(DungeonSettleListener dungeonSettleListener) {
-        if (dungeonSettleListeners == null) {
-            dungeonSettleListeners = new ArrayList<>();
-        }
-        dungeonSettleListeners.add(dungeonSettleListener);
+        this.dungeonSettleListeners.add(dungeonSettleListener);
     }
 
     public void triggerDungeonEvent(DungeonPassConditionType conditionType, int... params) {
-        if (dungeonManager == null) {
-            return;
-        }
-        dungeonManager.triggerEvent(conditionType, params);
+        Optional.ofNullable(this.dungeonManager).ifPresent(m -> m.triggerEvent(conditionType, params));
     }
 
-    public boolean isInScene(GameEntity entity) {
+    private boolean isInScene(GameEntity entity) {
         return this.entities.containsKey(entity.getId());
     }
 
     public synchronized void addPlayer(Player player) {
         // Check if player already in
-        if (getPlayers().contains(player)) {
-            return;
-        }
+        if (this.players.contains(player)) return;
 
         // Remove player from prev scene
-        if (player.getScene() != null) {
-            player.getScene().removePlayer(player);
-        }
+        if (player.getScene() != null) player.getScene().removePlayer(player);
 
         // Add
-        getPlayers().add(player);
-        player.setSceneId(this.getId());
+        this.players.add(player);
+        player.setSceneId(getId());
         player.setScene(this);
 
-        if (player == getWorld().getOwner()) {
-            player.getBlossomManager().setScene(this);
-        }
+        if (player == this.world.getHost()) player.getBlossomManager().setScene(this);
 
-        this.setupPlayerAvatars(player);
+        setupPlayerAvatars(player);
     }
 
     public synchronized void removePlayer(Player player) {
-        // Remove from challenge if leaving
-        if (this.getChallenge() != null && this.getChallenge().inProgress()) {
-            player.sendPacket(new PacketDungeonChallengeFinishNotify(this.getChallenge()));
-        }
+        // Remove from challenge if leaving, challenge has progress check
+        Optional.ofNullable(this.challenge).ifPresent(WorldChallenge::fail);
 
         // Remove player from scene
-        getPlayers().remove(player);
+        this.players.remove(player);
         player.setScene(null);
 
         // Remove player avatars
-         this.removePlayerAvatars(player);
+        removePlayerAvatars(player);
 
         // Remove player gadgets
-        for (EntityBaseGadget gadget : player.getTeamManager().getGadgets()) {
-            this.removeEntity(gadget);
-        }
+        player.getTeamManager().getGadgets().forEach(this::removeEntity);
 
         // Deregister scene if not in use
-        if (this.getPlayerCount() <= 0 && !this.dontDestroyWhenEmpty) {
-            this.getScriptManager().onDestroy();
-            this.getWorld().deregisterScene(this);
+        if (getPlayerCount() <= 0 && !this.dontDestroyWhenEmpty) {
+            this.scriptManager.onDestroy();
+            this.world.deregisterScene(this);
         }
-        this.saveGroups();
+        saveGroups();
     }
 
     private void setupPlayerAvatars(@NotNull Player player) {
         // Clear entities from old team
-        List<EntityAvatar> activeTeam = player.getTeamManager().getActiveTeam();
+        val activeTeam = player.getTeamManager().getActiveTeam();
         activeTeam.clear();
-        Optional.ofNullable(player.getTeamManager().getCurrentTeamInfo())
-            .ifPresent(info -> info.getAvatars().forEach(avatarId -> activeTeam.add(
-                new EntityAvatar(player.getScene(), player.getAvatars().getAvatarById(avatarId))
-            )));
+        Optional.ofNullable(player.getTeamManager().getCurrentTeamInfo()).map(TeamInfo::getAvatars).stream()
+            .flatMap(List::stream).map(player.getAvatars()::getAvatarById)
+            .map(avatar -> new EntityAvatar(player.getScene(), avatar)).forEach(activeTeam::add);
     }
 
     private synchronized void removePlayerAvatars(@NotNull Player player) {
@@ -256,33 +221,32 @@ public class Scene {
     }
 
     public void spawnPlayer(Player player) {
-        var teamManager = player.getTeamManager();
-        if (this.isInScene(teamManager.getCurrentAvatarEntity())) {
-            return;
+        val teamManager = player.getTeamManager();
+        val curAvatarEntity = teamManager.getCurrentAvatarEntity();
+        if (isInScene(curAvatarEntity)) return;
+
+        if (curAvatarEntity.getFightProperty(FightProperty.FIGHT_PROP_CUR_HP) <= 0f) {
+            curAvatarEntity.setFightProperty(FightProperty.FIGHT_PROP_CUR_HP, 1f);
         }
 
-        if (teamManager.getCurrentAvatarEntity().getFightProperty(FightProperty.FIGHT_PROP_CUR_HP) <= 0f) {
-            teamManager.getCurrentAvatarEntity().setFightProperty(FightProperty.FIGHT_PROP_CUR_HP, 1f);
-        }
-
-        this.addEntity(teamManager.getCurrentAvatarEntity());
+        addEntity(curAvatarEntity);
 
         // Notify the client of any extra skill charges
         teamManager.getActiveTeam().stream().map(EntityAvatar::getAvatar).forEach(Avatar::sendSkillExtraChargeMap);
     }
 
     private void addEntityDirectly(GameEntity entity) {
-        getEntities().put(entity.getId(), entity);
+        this.entities.put(entity.getId(), entity);
         entity.onCreate(); // Call entity create event
     }
 
     public synchronized void addEntity(GameEntity entity) {
-        this.addEntityDirectly(entity);
-        this.broadcastPacket(new PacketSceneEntityAppearNotify(entity));
+        addEntityDirectly(entity);
+        broadcastPacket(new PacketSceneEntityAppearNotify(entity));
     }
 
     public synchronized void addEntityToSingleClient(Player player, GameEntity entity) {
-        this.addEntityDirectly(entity);
+        addEntityDirectly(entity);
         player.sendPacket(new PacketSceneEntityAppearNotify(entity));
 
     }
@@ -296,38 +260,26 @@ public class Scene {
     }
 
     public void updateEntity(GameEntity entity, VisionType type) {
-        this.broadcastPacket(new PacketSceneEntityUpdateNotify(Arrays.asList(entity), type));
+        this.broadcastPacket(new PacketSceneEntityUpdateNotify(List.of(entity), type));
     }
 
     private static <T> List<List<T>> chopped(List<T> list, final int L) {
-        List<List<T>> parts = new ArrayList<List<T>>();
-        final int N = list.size();
-        for (int i = 0; i < N; i += L) {
-            parts.add(new ArrayList<T>(
-                list.subList(i, Math.min(N, i + L)))
-            );
-        }
-        return parts;
+        return IntStream.range(0, (list.size() + L - 1) / L)
+            .mapToObj(i -> list.subList(i * L, Math.min(list.size(), (i + 1) * L)))
+            .toList();
     }
 
     public synchronized void addEntities(Collection<? extends GameEntity> entities, VisionType visionType) {
-        if (entities == null || entities.isEmpty()) {
-            return;
-        }
-        for (GameEntity entity : entities) {
-            this.addEntityDirectly(entity);
-        }
+        if (entities == null || entities.isEmpty()) return;
 
-        for(val l : chopped(new ArrayList<>(entities), 100)) {
-            this.broadcastPacket(new PacketSceneEntityAppearNotify(l, visionType));
-        }
+        entities.forEach(this::addEntityDirectly);
+
+        chopped(entities.stream().toList(), 100).forEach(l -> broadcastPacket(new PacketSceneEntityAppearNotify(l, visionType)));
     }
 
     private GameEntity removeEntityDirectly(GameEntity entity) {
-        var removed = getEntities().remove(entity.getId());
-        if (removed != null) {
-            removed.onRemoved();//Call entity remove event
-        }
+        val removed = this.entities.remove(entity.getId());
+        Optional.ofNullable(removed).ifPresent(GameEntity::onRemoved); //Call entity remove event
 
         //if(entity instanceof EntityWeapon) {
         //    Grasscutter.getLogger().warn("Weapon removed {}: ", entity.getId());
@@ -340,60 +292,56 @@ public class Scene {
     }
 
     public void removeEntity(GameEntity entity) {
-        this.removeEntity(entity, VisionType.VISION_TYPE_DIE);
+        removeEntity(entity, VisionType.VISION_TYPE_DIE);
     }
 
-    public synchronized void removeEntity(GameEntity entity, VisionType visionType) {
-        GameEntity removed = this.removeEntityDirectly(entity);
-        if (removed != null) {
-            this.broadcastPacket(new PacketSceneEntityDisappearNotify(removed, visionType));
-        }
+    private synchronized void removeEntity(GameEntity entity, VisionType visionType) {
+        Optional.ofNullable(removeEntityDirectly(entity)).ifPresent(removed ->
+            broadcastPacket(new PacketSceneEntityDisappearNotify(removed, visionType)));
     }
 
-    public synchronized void removeEntities(List<? extends GameEntity> entity, VisionType visionType) {
-        var toRemove = entity.stream()
-            .filter(Objects::nonNull)
-            .map(this::removeEntityDirectly)
-            .filter(Objects::nonNull)
+    public synchronized void removeEntities(Collection<? extends GameEntity> entity, VisionType visionType) {
+        val toRemove = entity.stream().filter(Objects::nonNull)
+            .map(this::removeEntityDirectly).filter(Objects::nonNull)
             .toList();
-        if (toRemove.size() > 0) {
+        if (!toRemove.isEmpty()) {
             this.broadcastPacket(new PacketSceneEntityDisappearNotify(toRemove, visionType));
         }
     }
 
     public synchronized void replaceEntity(EntityAvatar oldEntity, EntityAvatar newEntity) {
-        this.removeEntityDirectly(oldEntity);
-        this.addEntityDirectly(newEntity);
-        this.broadcastPacket(new PacketSceneEntityDisappearNotify(oldEntity, VisionType.VISION_TYPE_REPLACE));
-        this.broadcastPacket(new PacketSceneEntityAppearNotify(newEntity, VisionType.VISION_TYPE_REPLACE, oldEntity.getId()));
+        removeEntityDirectly(oldEntity);
+        addEntityDirectly(newEntity);
+        broadcastPacket(new PacketSceneEntityDisappearNotify(oldEntity, VisionType.VISION_TYPE_REPLACE));
+        broadcastPacket(new PacketSceneEntityAppearNotify(newEntity, VisionType.VISION_TYPE_REPLACE, oldEntity.getId()));
     }
 
     public void showOtherEntities(Player player) {
-        GameEntity currentEntity = player.getTeamManager().getCurrentAvatarEntity();
-        List<GameEntity> entities = this.getEntities().values().stream().filter(entity -> entity != currentEntity).toList();
+        val entities = this.entities.values().stream().filter(entity ->
+            entity != player.getTeamManager().getCurrentAvatarEntity()).toList();
 
         player.sendPacket(new PacketSceneEntityAppearNotify(entities, VisionType.VISION_TYPE_MEET));
     }
 
     public void handleAttack(AttackResult result) {
         //GameEntity attacker = getEntityById(result.getAttackerId());
-        GameEntity target = getEntityById(result.getDefenseId());
-        ElementType attackType = ElementType.getTypeByValue(result.getElementType());
+        val target = getEntityById(result.getDefenseId());
+        val attackType = ElementType.getTypeByValue(result.getElementType());
         if (target == null) return;
 
-        // Godmode check
+        // God-mode check
         if (target instanceof EntityAvatar entityAvatar) {
             if (entityAvatar.getPlayer().inGodmode()) return;
 
             if (result.getDamage() != result.getDamageShield()) { // when avatar actually have a shield
                 //TODO check
-                Optional.ofNullable(getChallenge()).ifPresent(c ->
+                Optional.ofNullable(this.challenge).ifPresent(c ->
                     c.onDamageMonsterOrShield(getEntityById(result.getAttackerId()), result.getDamageShield() - result.getDamage()));
             }
         }
         target.damage(result.getDamage(), result.getAttackerId(), attackType);
         if (target instanceof EntityGadget gadget) {
-            Optional.ofNullable(getChallenge()).ifPresent(c -> c.onGadgetDamage(gadget));
+            Optional.ofNullable(this.challenge).ifPresent(c -> c.onGadgetDamage(gadget));
         }
     }
 
@@ -404,110 +352,91 @@ public class Scene {
     public void killEntity(GameEntity target, int attackerId) {
         GameEntity attacker = null;
 
-        if (attackerId > 0) {
-            attacker = getEntityById(attackerId);
-        }
+        if (attackerId > 0) attacker = getEntityById(attackerId);
 
         if (attacker != null) {
             // Check codex
             if (attacker instanceof EntityClientGadget gadgetAttacker) {
-                var clientGadgetOwner = getEntityById(gadgetAttacker.getOwnerEntityId());
+                val clientGadgetOwner = getEntityById(gadgetAttacker.getOwnerEntityId());
                 if (clientGadgetOwner instanceof EntityAvatar) {
                     ((EntityClientGadget) attacker).getOwner().getCodex().checkAnimal(target, CodexAnimalData.CountType.CODEX_COUNT_TYPE_KILL);
                 }
             } else if (attacker instanceof EntityAvatar avatarAttacker) {
                 avatarAttacker.getPlayer().getCodex().checkAnimal(target, CodexAnimalData.CountType.CODEX_COUNT_TYPE_KILL);
             }
+
+            // Reward drop, don't really want to give reward if attacker is null
+            if (target instanceof EntityMonster && getSceneType() != SceneType.SCENE_DUNGEON) {
+                this.world.getServer().getDropSystem().callDrop((EntityMonster) target);
+            }
         }
 
         // Packet
-        this.broadcastPacket(new PacketLifeStateChangeNotify(attackerId, target, LifeState.LIFE_DEAD));
-
-        // Reward drop
-        if (target instanceof EntityMonster && this.getSceneType() != SceneType.SCENE_DUNGEON) {
-            getWorld().getServer().getDropSystem().callDrop((EntityMonster) target);
-        }
+        broadcastPacket(new PacketLifeStateChangeNotify(attackerId, target, LifeState.LIFE_DEAD));
 
         // Remove entity from world
-        this.removeEntity(target);
+        removeEntity(target);
 
         // Death event
         target.onDeath(attackerId);
-        triggerDungeonEvent(DungeonPassConditionType.DUNGEON_COND_KILL_MONSTER_COUNT, ++killedMonsterCount);
+        triggerDungeonEvent(DungeonPassConditionType.DUNGEON_COND_KILL_MONSTER_COUNT, ++this.killedMonsterCount);
     }
 
     public void onTick() {
         // disable script for home
-        if (this.getSceneType() == SceneType.SCENE_HOME_WORLD || this.getSceneType() == SceneType.SCENE_HOME_ROOM) {
+        if (getSceneType() == SceneType.SCENE_HOME_WORLD || getSceneType() == SceneType.SCENE_HOME_ROOM) {
             finishLoading();
             return;
         }
-        if (this.getScriptManager().isInit()) {
+        if (this.scriptManager.isInit()) {
             //this.checkBlocks();
-            if (tickCount % 2 == 0) {
+            if (this.tickCount % 2 == 0) {
                 checkGroups();
             }
         } else {
             // TEMPORARY
-            this.checkSpawns();
+            checkSpawns();
         }
         // Triggers
         this.scriptManager.checkRegions();
 
-        if (challenge != null) {
-            challenge.onCheckTimeOut();
-        }
+        Optional.ofNullable(this.challenge).ifPresent(WorldChallenge::onCheckTimeOut);
 
-        val sceneTime = getSceneTimeSeconds();
-        getEntities().forEach((eid, e) -> e.onTick(sceneTime));
+        this.entities.values().forEach(e -> e.onTick(getSceneTimeSeconds()));
 
         checkNpcGroup();
         finishLoading();
         checkPlayerRespawn();
-        if (tickCount % 10 == 0) {
+        if (this.tickCount % 10 == 0) {
             broadcastPacket(new PacketSceneTimeNotify(this));
         }
-        tickCount++;
+        this.tickCount++;
     }
 
     private void checkPlayerRespawn() {
-        if(getScriptManager().getConfig() == null){
-            return;
-        }
-        val diePos = getScriptManager().getConfig().die_y;
-        players.forEach(player -> {
-            //Check if we need a respawn
-            if (diePos >= player.getPosition().getY()) {
-                //Respawn the player
-                respawnPlayer(player);
-            }
-        });
-        getEntities().forEach((eid, e) -> {
-            if(diePos >= e.getPosition().getY()){
-                killEntity(e);
-            }
-        });
+        if (this.scriptManager.getConfig() == null) return;
+
+        val diePos = this.scriptManager.getConfig().die_y;
+        // Check if we need a respawn
+        this.players.stream().filter(p -> diePos >= p.getPosition().getY()).forEach(this::respawnPlayer);
+        this.entities.values().stream().filter(e -> diePos >= e.getPosition().getY()).forEach(this::killEntity);
     }
 
-    public Position getDefaultLocation(Player player) {
-        val defaultPosition = getScriptManager().getConfig().born_pos;
-        return defaultPosition != null ? defaultPosition : player.getPosition();
+    private Position getDefaultLocation(Player player) {
+        return Optional.ofNullable(this.scriptManager.getConfig().born_pos).orElse(player.getPosition());
     }
 
     private Position getDefaultRot(Player player) {
-        val defaultRotation = getScriptManager().getConfig().born_rot;
-        return defaultRotation != null ? defaultRotation : player.getRotation();
+        return Optional.ofNullable(this.scriptManager.getConfig().born_rot).orElse(player.getRotation());
     }
 
     private Position getRespawnLocation(Player player) {
         //TODO get last valid location the player stood on
-        val lastCheckpointPos = dungeonManager != null ? dungeonManager.getRespawnLocation() : null;
-        return lastCheckpointPos != null ? lastCheckpointPos : getDefaultLocation(player);
+        return Optional.ofNullable(this.dungeonManager).map(DungeonManager::getRespawnLocation).orElse(getDefaultLocation(player));
     }
 
     private Position getRespawnRotation(Player player) {
-        val lastCheckpointRot = dungeonManager != null ? dungeonManager.getRespawnRotation() : null;
-        return lastCheckpointRot != null ? lastCheckpointRot : getDefaultRot(player);
+        return Optional.ofNullable(this.dungeonManager).map(DungeonManager::getRespawnRotation).orElse(getDefaultRot(player));
 
     }
 
@@ -515,58 +444,47 @@ public class Scene {
         player.getTeamManager().onAvatarDieDamage();
 
         // todo should probably respawn the player at the last valid location
-        val targetPos = getRespawnLocation(player);
-        val targetRot = getRespawnRotation(player);
-        val teleportProps = TeleportProperties.builder()
+        return this.world.transferPlayerToScene(player, TeleportProperties.builder()
             .sceneId(getId())
-            .teleportTo(targetPos)
-            .teleportRot(targetRot)
+            .teleportTo(getRespawnLocation(player))
+            .teleportRot(getRespawnRotation(player))
             .teleportType(PlayerTeleportEvent.TeleportType.INTERNAL)
             .enterType(EnterTypeOuterClass.EnterType.ENTER_TYPE_GOTO)
-            .enterReason(dungeonManager != null ? EnterReason.DungeonReviveOnWaypoint : EnterReason.Revival);
-
-
-        return getWorld().transferPlayerToScene(player, teleportProps.build());
+            .enterReason(this.dungeonManager != null ? EnterReason.DungeonReviveOnWaypoint : EnterReason.Revival)
+            .build());
     }
 
-    public void finishLoading() {
-        if (finishedLoading) {
-            return;
-        }
+    private void finishLoading() {
+        if (this.finishedLoading) return;
+
         this.finishedLoading = true;
-        afterLoadedCallbacks.forEach(Runnable::run);
-        afterLoadedCallbacks.clear();
+        this.afterLoadedCallbacks.forEach(Runnable::run);
+        this.afterLoadedCallbacks.clear();
     }
 
     public void runWhenFinished(Runnable runnable) {
-        if (isFinishedLoading()) {
+        if (this.finishedLoading) {
             runnable.run();
             return;
         }
-        afterLoadedCallbacks.add(runnable);
+        this.afterLoadedCallbacks.add(runnable);
     }
 
-    public int getEntityLevel(int baseLevel, int worldLevelOverride) {
-        int level = worldLevelOverride > 0 ? worldLevelOverride + baseLevel - 22 : baseLevel;
-        level = level >= 100 ? 100 : level;
-        level = level <= 0 ? 1 : level;
-
-        return level;
+    private int getEntityLevel(int baseLevel, int worldLevelOverride) {
+        return Math.max(1, Math.min(Math.max(worldLevelOverride + baseLevel - 22, baseLevel), 100));
     }
 
-    public void checkNpcGroup() {
+    private void checkNpcGroup() {
         Set<SceneNpcBornEntry> npcBornEntries = ConcurrentHashMap.newKeySet();
-        for (Player player : this.getPlayers()) {
-            npcBornEntries.addAll(loadNpcForPlayer(player));
-        }
+        npcBornEntries.addAll(this.players.stream().map(this::loadNpcForPlayer).flatMap(List::stream).toList());
 
         // clear the unreachable group for client
-        var toUnload = this.npcBornEntrySet.stream()
+        val toUnload = this.npcBornEntrySet.stream()
             .filter(i -> !npcBornEntries.contains(i))
             .map(SceneNpcBornEntry::getGroupId)
             .toList();
 
-        if (toUnload.size() > 0) {
+        if (!toUnload.isEmpty()) {
             broadcastPacket(new PacketGroupUnloadNotify(toUnload));
             Grasscutter.getLogger().debug("Unload NPC Group {}", toUnload);
         }
@@ -574,99 +492,84 @@ public class Scene {
         this.npcBornEntrySet = npcBornEntries;
     }
 
-    public synchronized void checkSpawns() {
-        Set<SpawnDataEntry.GridBlockId> loadedGridBlocks = new HashSet<>();
-        for (Player player : this.getPlayers()) {
-            for (SpawnDataEntry.GridBlockId block : SpawnDataEntry.GridBlockId.getAdjacentGridBlockIds(player.getSceneId(), player.getPosition()))
-                loadedGridBlocks.add(block);
-        }
-        if (this.loadedGridBlocks.containsAll(loadedGridBlocks)) {  // Don't recalculate static spawns if nothing has changed
-            return;
-        }
+    private synchronized void checkSpawns() {
+        val loadedGridBlocks = this.players.stream()
+            .map(p -> SpawnDataEntry.GridBlockId.getAdjacentGridBlockIds(p.getSceneId(), p.getPosition()))
+            .flatMap(Arrays::stream).collect(Collectors.toSet());
+
+        // Don't recalculate static spawns if nothing has changed
+        if (this.loadedGridBlocks.containsAll(loadedGridBlocks)) return;
+
         this.loadedGridBlocks = loadedGridBlocks;
-        var spawnLists = GameDepot.getSpawnLists();
-        Set<SpawnDataEntry> visible = new HashSet<>();
-        for (var block : loadedGridBlocks) {
-            var spawns = spawnLists.get(block);
-            if (spawns != null) {
-                visible.addAll(spawns);
-            }
-        }
+        val visible = loadedGridBlocks.stream().map(GameDepot.getSpawnLists()::get)
+            .filter(Objects::nonNull).flatMap(List::stream).collect(Collectors.toSet());
 
         // World level
-        WorldLevelData worldLevelData = GameData.getWorldLevelDataMap().get(getWorld().getWorldLevel());
-        int worldLevelOverride = 0;
-
-        if (worldLevelData != null) {
-            worldLevelOverride = worldLevelData.getMonsterLevel();
-        }
+        final int worldLevelOverride = Optional.ofNullable(GameData.getWorldLevelDataMap().get(this.world.getWorldLevel()))
+            .map(WorldLevelData::getMonsterLevel).orElse(0);
 
         // Todo
         List<GameEntity> toAdd = new ArrayList<>();
         List<GameEntity> toRemove = new ArrayList<>();
-        var spawnedEntities = this.getSpawnedEntities();
+        val spawnedEntities = this.spawnedEntities;
         for (SpawnDataEntry entry : visible) {
-            // If spawn entry is in our view and hasnt been spawned/killed yet, we should spawn it
-            if (!spawnedEntities.contains(entry) && !this.getDeadSpawnedEntities().contains(entry)) {
-                // Entity object holder
-                GameEntity entity = null;
+            // If spawn entry is in our view and hasn't been spawned/killed yet, we should spawn it
+            if (spawnedEntities.contains(entry) || this.deadSpawnedEntities.contains(entry)) continue;
+            // Entity object holder
+            GameEntity entity = null;
 
-                // Check if spawn entry is monster or gadget
-                if (entry.getMonsterId() > 0) {
-                    MonsterData data = GameData.getMonsterDataMap().get(entry.getMonsterId());
-                    if (data == null) continue;
+            // Check if spawn entry is monster or gadget
+            if (entry.getMonsterId() > 0) {
+                val data = GameData.getMonsterDataMap().get(entry.getMonsterId());
+                if (data == null) continue;
 
-                    int level = this.getEntityLevel(entry.getLevel(), worldLevelOverride);
+                final int level = getEntityLevel(entry.getLevel(), worldLevelOverride);
 
-                    EntityMonster monster = new EntityMonster(this, data, entry.getPos(), level);
-                    monster.getRotation().set(entry.getRot());
-                    monster.setGroupId(entry.getGroup().getGroupId());
-                    monster.setPoseId(entry.getPoseId());
-                    monster.setConfigId(entry.getConfigId());
-                    monster.setSpawnEntry(entry);
+                val monster = new EntityMonster(this, data, entry.getPos(), level);
+                monster.getRotation().set(entry.getRot());
+                monster.setGroupId(entry.getGroup().getGroupId());
+                monster.setPoseId(entry.getPoseId());
+                monster.setConfigId(entry.getConfigId());
+                monster.setSpawnEntry(entry);
 
-                    entity = monster;
-                } else if (entry.getGadgetId() > 0) {
-                    EntityGadget gadget = new EntityGadget(this, entry.getGadgetId(), entry.getPos(), entry.getRot());
-                    gadget.setGroupId(entry.getGroup().getGroupId());
-                    gadget.setConfigId(entry.getConfigId());
-                    gadget.setSpawnEntry(entry);
-                    int state = entry.getGadgetState();
-                    if (state > 0) {
-                        gadget.setState(state);
-                    }
-                    gadget.buildContent();
-
-                    gadget.setFightProperty(FightProperty.FIGHT_PROP_BASE_HP, Float.POSITIVE_INFINITY);
-                    gadget.setFightProperty(FightProperty.FIGHT_PROP_CUR_HP, Float.POSITIVE_INFINITY);
-                    gadget.setFightProperty(FightProperty.FIGHT_PROP_MAX_HP, Float.POSITIVE_INFINITY);
-
-                    entity = gadget;
+                entity = monster;
+            } else if (entry.getGadgetId() > 0) {
+                val gadget = new EntityGadget(this, entry.getGadgetId(), entry.getPos(), entry.getRot());
+                gadget.setGroupId(entry.getGroup().getGroupId());
+                gadget.setConfigId(entry.getConfigId());
+                gadget.setSpawnEntry(entry);
+                int state = entry.getGadgetState();
+                if (state > 0) {
+                    gadget.setState(state);
                 }
+                gadget.buildContent();
 
-                if (entity == null) continue;
+                gadget.setFightProperty(FightProperty.FIGHT_PROP_BASE_HP, Float.POSITIVE_INFINITY);
+                gadget.setFightProperty(FightProperty.FIGHT_PROP_CUR_HP, Float.POSITIVE_INFINITY);
+                gadget.setFightProperty(FightProperty.FIGHT_PROP_MAX_HP, Float.POSITIVE_INFINITY);
 
-                // Add to scene and spawned list
-                toAdd.add(entity);
-                spawnedEntities.add(entry);
+                entity = gadget;
             }
+
+            if (entity == null) continue;
+
+            // Add to scene and spawned list
+            toAdd.add(entity);
+            spawnedEntities.add(entry);
         }
 
-        for (GameEntity entity : this.getEntities().values()) {
-            var spawnEntry = entity.getSpawnEntry();
-            if (spawnEntry != null && !(entity instanceof EntityWeapon) && !visible.contains(spawnEntry)) {
-                toRemove.add(entity);
-                spawnedEntities.remove(spawnEntry);
-            }
-        }
+        this.entities.values().stream().filter(entity -> entity.getSpawnEntry() != null)
+            .filter(entity -> !(entity instanceof EntityWeapon))
+            .filter(entity -> !visible.contains(entity.getSpawnEntry()))
+            .peek(toRemove::add).map(GameEntity::getSpawnEntry).forEach(spawnedEntities::remove);
 
-        if (toAdd.size() > 0) {
-            toAdd.stream().forEach(this::addEntityDirectly);
-            this.broadcastPacket(new PacketSceneEntityAppearNotify(toAdd, VisionType.VISION_TYPE_BORN));
+        if (!toAdd.isEmpty()) {
+            toAdd.forEach(this::addEntityDirectly);
+            broadcastPacket(new PacketSceneEntityAppearNotify(toAdd, VisionType.VISION_TYPE_BORN));
         }
-        if (toRemove.size() > 0) {
-            toRemove.stream().forEach(this::removeEntityDirectly);
-            this.broadcastPacket(new PacketSceneEntityDisappearNotify(toRemove, VisionType.VISION_TYPE_REMOVE));
+        if (!toRemove.isEmpty()) {
+            toRemove.forEach(this::removeEntityDirectly);
+            broadcastPacket(new PacketSceneEntityDisappearNotify(toRemove, VisionType.VISION_TYPE_REMOVE));
         }
     }
 
@@ -676,308 +579,242 @@ public class Scene {
             player.getPosition().toXZDoubleArray(), Grasscutter.getConfig().server.game.loadEntitiesForPlayerRange);
     }
 
-    public Set<Integer> getPlayerActiveGroups(Player player) {
+    private Set<Integer> getPlayerActiveGroups(Player player) {
         // consider the borders' entities of blocks, so we check if contains by index
-        Position playerPosition = player.getPosition();
-        Set<Integer> activeGroups = new HashSet<>();
-        for(int i = 0; i < 4; i++) {
-            Grid grid = getScriptManager().getGroupGrids().get(i);
-
-            activeGroups.addAll(grid.getNearbyGroups(i, playerPosition));
-        }
-
-        return activeGroups;
+        return IntStream.range(0, 4)
+            .mapToObj(i -> getScriptManager().getGroupGrids().get(i).getNearbyGroups(i, player.getPosition()))
+            .flatMap(Set::stream).collect(Collectors.toSet());
     }
 
     public synchronized boolean loadBlock(SceneBlock block) {
         if (this.loadedBlocks.contains(block)) return false;
-        this.onLoadBlock(block, this.players);
+
+        onLoadBlock(block, this.players);
         this.loadedBlocks.add(block);
         return true;
     }
 
-    public synchronized void checkGroups() {
-        var playerMoved = this.players.stream().filter(p -> p.getLastCheckedPosition() == null || !p.getLastCheckedPosition().equal2d(p.getPosition())).toList();
+    /**
+     * Periodically checks for groups spawned, mainly
+     * 1) checks if currently loaded groups are out of player's sight
+     *  - if so, remove those groups
+     * 2) check if there are new groups came into player's sight
+     *  - if so, load up those groups
+     * */
+    private synchronized void checkGroups() {
+        val playerMoved = this.players.stream()
+            .filter(p -> p.getLastCheckedPosition() == null || !p.getLastCheckedPosition().equal2d(p.getPosition()))
+            .peek(p -> p.setLastCheckedPosition(p.getPosition().clone())).findAny();
+
         if(playerMoved.isEmpty()) return;
 
-        playerMoved.forEach(p -> p.setLastCheckedPosition(p.getPosition().clone()));
+        val visible = this.players.stream().map(this::getPlayerActiveGroups)
+            .flatMap(Collection::stream).collect(Collectors.toSet());
 
-        Set<Integer> visible = this.players.stream()
-            .map(player -> this.getPlayerActiveGroups(player))
-            .flatMap(Collection::stream)
-            .collect(Collectors.toSet());
+        this.loadedGroups.stream().filter(group -> !visible.contains(group.id) && !group.dynamic_load)
+            .forEach(group -> unloadGroup(this.scriptManager.getBlocks().get(group.block_id), group.id));
 
-        Iterator<SceneGroup> it = this.loadedGroups.iterator();
-        while(it.hasNext()) {
-            SceneGroup group = it.next();
-            if(!visible.contains(group.id) && !group.dynamic_load) unloadGroup(scriptManager.getBlocks().get(group.block_id), group.id);
+        val toLoad = visible.stream().filter(g -> this.loadedGroups.stream().noneMatch(gr -> gr.id == g))
+            .filter(g -> !this.replacedGroup.contains(g)).map(g -> Optional.ofNullable(this.scriptManager.getBlocks())
+                .stream().map(Map::values).flatMap(Collection::stream).peek(this::loadBlock).map(b -> b.groups.get(g))
+                .filter(Objects::nonNull).filter(group -> !group.dynamic_load).findFirst().orElse(null))
+            .filter(Objects::nonNull).toList();
+
+        onLoadGroup(toLoad);
+        if(!toLoad.isEmpty()) onRegisterGroups();
+    }
+
+    private Set<SceneGroup> onLoadBlock(SceneBlock block, List<Player> players) {
+        if (!block.isLoaded()) {
+            this.scriptManager.loadBlockFromScript(block);
+            Grasscutter.getLogger().info("Scene {} Block {} loaded.", getId(), block.id);
         }
-
-        List<SceneGroup> toLoad = visible.stream().filter(g -> this.loadedGroups.stream().filter(gr -> gr.id == g).count() == 0).map(g -> {
-            for(var b : scriptManager.getBlocks().values()) {
-                loadBlock(b);
-                SceneGroup group = b.groups.getOrDefault(g, null);
-                if(group != null && !group.dynamic_load) return group;
-            }
-
-            return null;
-        }).filter(g -> g != null).toList();
-
-        this.onLoadGroup(toLoad);
-        if(!toLoad.isEmpty()) this.onRegisterGroups();
+        return this.scriptManager.getLoadedGroupSetPerBlock().computeIfAbsent(block.id, f -> new HashSet<>());
     }
 
-    public void onLoadBlock(SceneBlock block, List<Player> players) {
-        this.getScriptManager().loadBlockFromScript(block);
-        scriptManager.getLoadedGroupSetPerBlock().put(block.id, new HashSet<>());
-
-        Grasscutter.getLogger().info("Scene {} Block {} loaded.", this.getId(), block.id);
-    }
-
-    public int loadDynamicGroup(int group_id) {
-        SceneGroup group = getScriptManager().getGroupById(group_id);
-        if(group == null || getScriptManager().getGroupInstanceById(group_id) != null) return -1; //Group not found or already instanced
-
-        onLoadGroup(new ArrayList<>(Arrays.asList(group)));
-
-        if(GameData.getGroupReplacements().containsKey(group_id)) onRegisterGroups();
-
-        SceneGroupInstance instance = getScriptManager().getGroupInstanceById(group_id);
-        if(instance != null)
-            return instance.getActiveSuiteId();
-
-        return -1;
+    /**
+     * Load specific (dynamic loaded) group
+     * */
+    public int loadDynamicGroup(int groupId) {
+        return this.scriptManager.getGroupInstanceById(groupId) != null ? -1 :
+            Optional.ofNullable(this.scriptManager.getGroupById(groupId))
+                .map(group -> group.init_config)
+                .map(config -> config.suite).orElse(-1);
     }
 
     public boolean unregisterDynamicGroup(int groupId){
-        SceneGroup group = getScriptManager().getGroupById(groupId);
+        val group = this.scriptManager.getGroupById(groupId);
         if(group == null) return false;
 
-        SceneBlock block = getScriptManager().getBlocks().get(group.block_id);
+        val block = this.scriptManager.getBlocks().get(group.block_id);
         unloadGroup(block, groupId);
+
+        val toRestore = Optional.ofNullable(block.groups.get(groupId)).map(g -> g.getReplaceableGroups(block.groups.values()))
+            .stream().flatMap(List::stream).filter(replacement -> this.replacedGroup.remove(replacement.id)).toList();
+        if (!toRestore.isEmpty()) {
+            onLoadGroup(toRestore);
+            Grasscutter.getLogger().info("Unregistered group: {}", groupId);
+            Grasscutter.getLogger().info("Replaced groups: {}", this.replacedGroup);
+        }
         return true;
     }
 
+    /**
+     * Check if a spawning group(1) will replace other groups(2). If so, unload groups(2)
+     * */
     public void onRegisterGroups() {
-        Set<SceneGroup> sceneGroups = this.loadedGroups;
-        Map<Integer, SceneGroup> sceneGroupMap = sceneGroups.stream().collect(Collectors.toMap(item -> item.id, item -> item));
-        List<Integer> sceneGroupsIds = sceneGroups.stream()
-            .map(group -> group.id)
-            .toList();
-        List<Integer> dynamicGroups = sceneGroups.stream()
-                .filter(group -> group.dynamic_load)
-                .map(group -> group.id)
-                .toList();
+        // Create the graph
+        val groupList = new HashSet<Integer>();
+        val nodes = GameData.getGroupReplacements().values().stream()
+            .filter(replacement -> this.loadedGroups.stream().filter(group -> group.dynamic_load)
+                .anyMatch(group -> group.id == replacement.id)) // dynamic groups
+//            .filter(replacement -> getReplacedGroup().stream().noneMatch(replacement.replace_groups::contains))
+            .peek(replacement -> Grasscutter.getLogger().info("Graph ordering replacement {}", replacement))
+            .peek(replacement -> groupList.add(replacement.id))
+            .peek(replacement -> groupList.addAll(replacement.replace_groups))
+            .map(replacement -> replacement.replace_groups
+                .stream().map(id -> new KahnsSort.Node(replacement.id, id)).toList())
+            .flatMap(List::stream)
+            .collect(Collectors.toSet());
 
-        //Create the graph
-        List<KahnsSort.Node> nodes = new ArrayList<>();
-        List<Integer> groupList = new ArrayList<>();
-        GameData.getGroupReplacements().values().stream().filter(replacement -> dynamicGroups.contains(replacement.id)).forEach(replacement -> {
-            Grasscutter.getLogger().info("Graph ordering replacement {}", replacement);
-            replacement.replace_groups.forEach(group -> {
-                nodes.add(new KahnsSort.Node(replacement.id, group));
-                if(!groupList.contains(group)) groupList.add(group);
-            });
-            if(!groupList.contains(replacement.id)) groupList.add(replacement.id);
-        });
-
-        KahnsSort.Graph graph = new KahnsSort.Graph(nodes, groupList);
-        List<Integer> dynamicGroupsOrdered = KahnsSort.doSort(graph);
-
-        //Now we can start unloading and loading groups :D
-        dynamicGroupsOrdered.forEach(group -> {
-            if(GameData.getGroupReplacements().containsKey((int)group)) { //isGroupJoinReplacement
-                GroupReplacementData data = GameData.getGroupReplacements().get((int)group);
-                SceneGroup sceneGroupReplacement = this.loadedGroups.stream().filter(g -> g.id == group).findFirst().get();
-                if(sceneGroupReplacement != null && sceneGroupReplacement.is_replaceable != null) {
-                    Iterator<Integer> it = data.replace_groups.iterator();
-                    while(it.hasNext()) {
-                        int replace_group = it.next();
-                        if(sceneGroupsIds.contains(replace_group)) {
-                            //Check if we can replace this group
-                            SceneGroup sceneGroup = sceneGroupMap.get(replace_group);
-                            if(sceneGroup != null && sceneGroup.is_replaceable != null &&
-                                ((sceneGroup.is_replaceable.value &&
-                                sceneGroup.is_replaceable.version <= sceneGroupReplacement.is_replaceable.version) || sceneGroup.is_replaceable.new_bin_only)) {
-                                unloadGroup(scriptManager.getBlocks().get(sceneGroup.block_id), replace_group);
-                                it.remove();
-                                Grasscutter.getLogger().info("Graph ordering: unloaded {}", replace_group);
-                            }
-                        }
-                    }
-                }
-            }
-        });
+        // Now we can start unloading and loading groups :D
+        Optional.ofNullable(KahnsSort.doSort(new KahnsSort.Graph(
+                nodes.stream().toList(), groupList.stream().toList()))).stream().flatMap(List::stream)
+            .map(groupId -> this.loadedGroups.stream().filter(g -> g.id == groupId).findFirst()) // isGroupJoinReplacement
+            .filter(Optional::isPresent).map(Optional::get)
+            .map(targetGroup -> targetGroup.getReplaceableGroups(this.loadedGroups))
+            .flatMap(List::stream)
+            .filter(replacement -> !this.replacedGroup.contains(replacement.id))
+            .peek(replacement -> this.replacedGroup.add(replacement.id))
+            .peek(replacement -> Grasscutter.getLogger().info("Graph ordering: unloaded {}", replacement.id))
+            .peek(replacement -> Grasscutter.getLogger().info("Replaced groups: {}", this.replacedGroup))
+            .forEach(replacement -> unloadGroup(this.scriptManager.getBlocks().get(replacement.block_id), replacement.id));
     }
 
     public void loadTriggerFromGroup(SceneGroup group, String triggerName) {
         //Load triggers and regions
-        getScriptManager().registerTrigger(group.triggers.values().stream().filter(p -> p.getName().contains(triggerName)).toList());
-        group.regions.values().stream().filter(q -> q.config_id == Integer.parseInt(triggerName.substring(13))).map(region -> new EntityRegion(this, region))
-            .forEach(getScriptManager()::registerRegion);
+        this.scriptManager.registerTrigger(group.triggers.values().stream().filter(p -> p.getName().contains(triggerName)).toList());
+        group.regions.values().stream().filter(q -> q.config_id == Integer.parseInt(triggerName.substring(13)))
+            .map(region -> new EntityRegion(this, region)).forEach(this.scriptManager::registerRegion);
     }
 
+    /**
+     * Load specific group(s), used when this
+     * 1) group is came into player's sight (or visible)
+     * 2) group is being registered
+     * */
     public void onLoadGroup(List<SceneGroup> groups) {
-        if (groups == null || groups.isEmpty()) {
-            return;
-        }
-        for (SceneGroup group : groups) {
-            if(this.loadedGroups.contains(group)) continue;
+        if (groups == null || groups.isEmpty()) return;
 
+        groups.stream().filter(Objects::nonNull).filter(group -> !this.loadedGroups.contains(group))
             // We load the script files for the groups here
-            this.getScriptManager().loadGroupFromScript(group);
-            if(!scriptManager.getLoadedGroupSetPerBlock().containsKey(group.block_id)) onLoadBlock(scriptManager.getBlocks().get(group.block_id), players);
-            scriptManager.getLoadedGroupSetPerBlock().get(group.block_id).add(group);
-        }
+            .peek(this.scriptManager::loadGroupFromScript)
+            .forEach(group -> onLoadBlock(this.scriptManager.getBlocks().get(group.block_id), getPlayers()).add(group));
 
         // Spawn gadgets AFTER triggers are added
         // TODO
-        var entities = new ArrayList<GameEntity>();
-        var entitiesBorn = new ArrayList<GameEntity>();
-        for (SceneGroup group : groups) {
-            if(this.loadedGroups.contains(group)) continue;
+        val entities = new ArrayList<GameEntity>();
+        val entitiesBorn = new ArrayList<GameEntity>();
+        groups.stream().filter(group -> !this.loadedGroups.contains(group)).filter(group -> group.init_config != null)
+            .map(group -> Optional.ofNullable(this.scriptManager.getCachedGroupInstanceById(group.id))
+                .stream().peek(cachedInstance -> cachedInstance.setLuaGroup(group))
+                .findFirst().orElse(this.scriptManager.getGroupInstanceById(group.id)))
+            .peek(gi -> this.loadedGroups.add(gi.getLuaGroup())) // Load suites
+            .forEach(gi -> this.scriptManager.refreshGroup(gi, 0, false, entitiesBorn)); //This is what the official server does
 
-            if (group.init_config == null) {
-                continue;
-            }
-
-            SceneGroupInstance groupInstance = this.getScriptManager().getGroupInstanceById(group.id);
-            var cachedInstance = this.getScriptManager().getCachedGroupInstanceById(group.id);
-            if(cachedInstance != null) {
-                cachedInstance.setLuaGroup(group);
-                groupInstance = cachedInstance;
-            }
-
-            // Load garbages
-            /*List<SceneGadget> garbageGadgets = group.getGarbageGadgets();
-
-            if (garbageGadgets != null) {
-                entities.addAll(garbageGadgets.stream().map(g -> scriptManager.createGadget(group.id, group.block_id, g))
-                    .filter(Objects::nonNull)
-                    .toList());
-            }*/
-
-            // Load suites
-            //int suite = group.findInitSuiteIndex(0);
-            this.getScriptManager().refreshGroup(groupInstance, 0, false, entitiesBorn); //This is what the official server does
-
-            this.loadedGroups.add(group);
-        }
-
-        scriptManager.meetEntities(entities);
-        scriptManager.addEntities(entitiesBorn);
-        groups.forEach(g -> scriptManager.callEvent(new ScriptArgs(g.id, EventType.EVENT_GROUP_LOAD, g.id)));
-        Grasscutter.getLogger().info("Scene {} loaded {} group(s)", this.getId(), groups.size());
+        this.scriptManager.meetEntities(entities);
+        this.scriptManager.addEntities(entitiesBorn);
+        groups.forEach(g -> this.scriptManager.callEvent(new ScriptArgs(g.id, EventType.EVENT_GROUP_LOAD, g.id)));
+        Grasscutter.getLogger().info("Scene {} loaded {} group(s)", getId(), groups.size());
     }
 
-    public void unloadGroup(SceneBlock block, int group_id) {
-        List<GameEntity> toRemove = this.getEntities().values().stream()
-                .filter(e -> e != null && (e.getBlockId() == block.id && e.getGroupId() == group_id)).toList();
+    /**
+     * Remove specific group, used when this
+     * 1) group is not within player's sight (or not visible)
+     * 2) group is replaced by other groups
+     * 3) group is being unregistered
+     * */
+    private void unloadGroup(SceneBlock block, int groupId) {
+        removeEntities(this.entities.values().stream().filter(Objects::nonNull).filter(e ->
+            e.getBlockId() == block.id && e.getGroupId() == groupId).toList(), VisionType.VISION_TYPE_REMOVE);
 
-        if (toRemove.size() > 0) {
-            toRemove.forEach(this::removeEntityDirectly);
-            this.broadcastPacket(new PacketSceneEntityDisappearNotify(toRemove, VisionType.VISION_TYPE_REMOVE));
-        }
+        val group = block.groups.get(groupId);
+        Optional.ofNullable(group.triggers).map(Map::values).stream().flatMap(Collection::stream)
+            .forEach(this.scriptManager::deregisterTrigger);
+        Optional.ofNullable(group.regions).map(Map::values).stream().flatMap(Collection::stream)
+            .forEach(this.scriptManager::deregisterRegion);
 
-        SceneGroup group = block.groups.get(group_id);
-        if (group.triggers != null) {
-            group.triggers.values().forEach(getScriptManager()::deregisterTrigger);
-        }
-        if (group.regions != null) {
-            group.regions.values().forEach(getScriptManager()::deregisterRegion);
-        }
+        Optional.ofNullable(this.scriptManager.getLoadedGroupSetPerBlock().get(block.id)).ifPresent(s -> s.remove(group));
 
-        if(scriptManager.getLoadedGroupSetPerBlock().containsKey(block.id))
-            scriptManager.getLoadedGroupSetPerBlock().get(block.id).remove(group);
         this.loadedGroups.remove(group);
 
-        if(scriptManager.getLoadedGroupSetPerBlock().get(block.id).isEmpty()) {
-            scriptManager.getLoadedGroupSetPerBlock().remove(block.id);
-            Grasscutter.getLogger().info("Scene {} Block {} is unloaded.", this.getId(), block.id);
+        if (this.scriptManager.getLoadedGroupSetPerBlock().get(block.id).isEmpty()) {
+            this.scriptManager.getLoadedGroupSetPerBlock().remove(block.id);
+            Grasscutter.getLogger().info("Scene {} Block {} is unloaded.", getId(), block.id);
         }
 
-        broadcastPacket(new PacketGroupUnloadNotify(Arrays.asList(group_id)));
-        scriptManager.unregisterGroup(group);
+        broadcastPacket(new PacketGroupUnloadNotify(List.of(groupId)));
+        this.scriptManager.unregisterGroup(group);
     }
 
     // Gadgets
 
     public void onPlayerCreateGadget(EntityClientGadget gadget) {
         // Directly add
-        this.addEntityDirectly(gadget);
+        addEntityDirectly(gadget);
 
         // Add to owner's gadget list
         gadget.getOwner().getTeamManager().getGadgets().add(gadget);
 
         // Optimization
-        if (this.getPlayerCount() == 1 && this.getPlayers().get(0) == gadget.getOwner()) {
-            return;
+        if (this.players.stream().anyMatch(p -> p != gadget.getOwner())) { // if there is other players in scene
+            broadcastPacketToOthers(gadget.getOwner(), new PacketSceneEntityAppearNotify(gadget));
         }
-
-        this.broadcastPacketToOthers(gadget.getOwner(), new PacketSceneEntityAppearNotify(gadget));
     }
 
     public void onPlayerDestroyGadget(int entityId) {
-        GameEntity entity = getEntities().get(entityId);
-
-        if (entity == null || !(entity instanceof EntityClientGadget)) {
-            return;
-        }
+        if (!(this.entities.get(entityId) instanceof EntityClientGadget gadget)) return;
 
         // Get and remove entity
-        EntityClientGadget gadget = (EntityClientGadget) entity;
-        this.removeEntityDirectly(gadget);
+        removeEntityDirectly(gadget);
 
         // Remove from owner's gadget list
         gadget.getOwner().getTeamManager().getGadgets().remove(gadget);
 
         // Optimization
-        if (this.getPlayerCount() == 1 && this.getPlayers().get(0) == gadget.getOwner()) {
-            return;
+        if (this.players.stream().anyMatch(p -> p != gadget.getOwner())) { // if there is other players in scene
+            broadcastPacketToOthers(gadget.getOwner(), new PacketSceneEntityDisappearNotify(gadget, VisionType.VISION_TYPE_DIE));
         }
-
-        this.broadcastPacketToOthers(gadget.getOwner(), new PacketSceneEntityDisappearNotify(gadget, VisionType.VISION_TYPE_DIE));
     }
 
     // Broadcasting
-
+    /**
+     * Send packets to all players in world
+     * */
     public void broadcastPacket(BasePacket packet) {
         // Send to all players - might have to check if player has been sent data packets
-        for (Player player : this.getPlayers()) {
-            player.getSession().send(packet);
-        }
+        broadcastPacketToOthers(null, packet);
     }
 
+    /**
+     * Send packets to all players in world excluding one, which normally is the owner
+     * */
     public void broadcastPacketToOthers(Player excludedPlayer, BasePacket packet) {
-        // Optimization
-        if (this.getPlayerCount() == 1 && this.getPlayers().get(0) == excludedPlayer) {
-            return;
-        }
-        // Send to all players - might have to check if player has been sent data packets
-        for (Player player : this.getPlayers()) {
-            if (player == excludedPlayer) {
-                continue;
-            }
-            // Send
-            player.getSession().send(packet);
-        }
+        this.players.stream().filter(p -> p != excludedPlayer).forEach(p -> p.sendPacket(packet));
     }
 
     public void addItemEntity(int itemId, int amount, GameEntity bornForm) {
-        ItemData itemData = GameData.getItemDataMap().get(itemId);
-        if (itemData == null) {
-            return;
-        }
+        val itemData = GameData.getItemDataMap().get(itemId);
+        if (itemData == null) return;
+
         if (itemData.isEquip()) {
-            float range = (1.5f + (.05f * amount));
+            val range = (1.5f + (.05f * amount));
             for (int i = 0; i < amount; i++) {
-                Position pos = bornForm.getPosition().nearby2d(range).addZ(.9f);  // Why Z?
-                EntityItem entity = new EntityItem(this, null, itemData, pos, 1);
-                addEntity(entity);
+                val pos = bornForm.getPosition().nearby2d(range).addZ(.9f);  // Why Z?
+                addEntity(new EntityItem(this, null, itemData, pos, 1));
             }
         } else {
-            EntityItem entity = new EntityItem(this, null, itemData, bornForm.getPosition().clone().addZ(.9f), amount);  // Why Z?
-            addEntity(entity);
+            addEntity(new EntityItem(this, null, itemData, bornForm.getPosition().clone().addZ(.9f), amount));
         }
     }
 
@@ -986,72 +823,50 @@ public class Scene {
     }
 
     private List<SceneNpcBornEntry> loadNpcForPlayer(Player player) {
-        var pos = player.getPosition();
-        var data = GameData.getSceneNpcBornData().get(getId());
-        if (data == null) {
-            return List.of();
-        }
+        val pos = player.getPosition();
+        val data = GameData.getSceneNpcBornData().get(getId());
+        if (data == null) return List.of();
 
-        var npcList = SceneIndexManager.queryNeighbors(data.getIndex(), pos.toDoubleArray(),
+        val npcList = SceneIndexManager.queryNeighbors(data.getIndex(), pos.toDoubleArray(),
             Grasscutter.getConfig().server.game.loadEntitiesForPlayerRange);
 
-        var sceneNpcBornEntries = npcList.stream()
-            .filter(i -> !this.npcBornEntrySet.contains(i))
-            .toList();
+        val sceneNpcBornEntries = npcList.stream().filter(i -> !this.npcBornEntrySet.contains(i)).toList();
 
-        if (sceneNpcBornEntries.size() > 0) {
-            this.broadcastPacket(new PacketGroupSuiteNotify(sceneNpcBornEntries));
+        if (!sceneNpcBornEntries.isEmpty()) {
+            broadcastPacket(new PacketGroupSuiteNotify(sceneNpcBornEntries));
             Grasscutter.getLogger().debug("Loaded Npc Group Suite {}", sceneNpcBornEntries);
         }
         return npcList;
     }
 
     public void loadGroupForQuest(List<QuestGroupSuite> sceneGroupSuite) {
-        if (!scriptManager.isInit()) {
-            return;
-        }
+        if (!this.scriptManager.isInit()) return;
 
-        sceneGroupSuite.forEach(i -> {
-            var group = scriptManager.getGroupById(i.getGroup());
-            if (group == null) {
-                return;
-            }
-            var groupInstance = scriptManager.getGroupInstanceById(i.getGroup());
-            var suite = group.getSuiteByIndex(i.getSuite());
-            if (suite == null || groupInstance == null) {
-                return;
-            }
-            scriptManager.refreshGroup(groupInstance, i.getSuite(), false);
-        });
+        sceneGroupSuite.stream().filter(i -> this.scriptManager.getGroupById(i.getGroup()) != null)
+            .forEach(i -> this.scriptManager.refreshGroup(i.getGroup(), i.getSuite(), false));
     }
 
     public void unlockForce(int force) {
-        unlockedForces.add(force);
+        this.unlockedForces.add(force);
         broadcastPacket(new PacketSceneForceUnlockNotify(force, true));
     }
 
     public void lockForce(int force) {
-        unlockedForces.remove(force);
+        this.unlockedForces.remove(force);
         broadcastPacket(new PacketSceneForceLockNotify(force));
     }
 
     public void selectWorktopOptionWith(SelectWorktopOptionReqOuterClass.SelectWorktopOptionReq req) {
-        GameEntity entity = getEntityById(req.getGadgetEntityId());
-        if (entity == null) {
-            return;
-        }
-        // Handle
-        if (entity instanceof EntityGadget gadget) {
-            if (gadget.getContent() instanceof GadgetWorktop worktop) {
-                boolean shouldDelete = worktop.onSelectWorktopOption(req);
-                if (shouldDelete) {
-                    entity.getScene().removeEntity(entity, VisionType.VISION_TYPE_REMOVE);
-                }
-            }
-        }
+        val entity = getEntityById(req.getGadgetEntityId());
+        Optional.ofNullable(entity)
+            .filter(EntityGadget.class::isInstance).map(EntityGadget.class::cast)
+            .map(EntityGadget::getContent)
+            .filter(GadgetWorktop.class::isInstance).map(GadgetWorktop.class::cast)
+            .filter(worktop -> worktop.onSelectWorktopOption(req))
+            .ifPresent(worktop -> entity.getScene().removeEntity(entity, VisionType.VISION_TYPE_REMOVE));
     }
 
     public void saveGroups() {
-        this.getScriptManager().getCachedGroupInstances().values().forEach(SceneGroupInstance::save);
+        this.scriptManager.getCachedGroupInstances().values().forEach(SceneGroupInstance::save);
     }
 }
